tests/dataset/tpc-ds/compiler/c/q97.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:49Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static void _json_map_string_int(map_string_int m) {
  printf("{");
  for (int i = 0; i < m.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(m.data[i].key);
    printf(":");
    _json_int(m.data[i].value);
  }
  printf("}");
}
typedef struct StoreSale StoreSale;
typedef struct CatalogSale CatalogSale;

typedef struct {
  int ss_customer_sk;
  int ss_item_sk;
} store_sale_t;

typedef struct {
  int cs_bill_customer_sk;
  int cs_item_sk;
} catalog_sale_t;

typedef struct {
  int customer_sk;
  int item_sk;
} ssci_item_t;
typedef struct {
  int len;
  ssci_item_t *data;
} ssci_item_list_t;
ssci_item_list_t create_ssci_item_list(int len) {
  ssci_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ssci_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_sk;
  int item_sk;
} csci_item_t;
typedef struct {
  int len;
  csci_item_t *data;
} csci_item_list_t;
csci_item_list_t create_csci_item_list(int len) {
  csci_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(csci_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int store_only;
  int catalog_only;
  int store_and_catalog;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_customer_sk;
  int ss_item_sk;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_bill_customer_sk;
  int cs_item_sk;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static map_string_int test_TPCDS_Q97_overlap_result;
static void test_TPCDS_Q97_overlap() {
  if (!(test_TPCDS_Q97_overlap_result.store_only == 1 &&
        test_TPCDS_Q97_overlap_result.catalog_only == 1 &&
        test_TPCDS_Q97_overlap_result.store_and_catalog == 1)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {
      (store_sale_t){.ss_customer_sk = 1, .ss_item_sk = 1},
      (store_sale_t){.ss_customer_sk = 2, .ss_item_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.cs_bill_customer_sk = 1, .cs_item_sk = 1},
      (catalog_sale_t){.cs_bill_customer_sk = 3, .cs_item_sk = 2}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  ssci_item_list_t ssci = (ssci_item_list_t){0, NULL};
  csci_item_list_t csci = (csci_item_list_t){0, NULL};
  list_int tmp1 = list_int_create(ssci.len * csci.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < ssci.len; tmp3++) {
    ssci_item_t s = ssci.data[tmp3];
    for (int tmp4 = 0; tmp4 < csci.len; tmp4++) {
      csci_item_t c = csci.data[tmp4];
      if (!(s.customer_sk == c.customer_sk && s.item_sk == c.item_sk)) {
        continue;
      }
      tmp1.data[tmp2] = 1;
      tmp2++;
    }
  }
  tmp1.len = tmp2;
  int both = tmp1.len;
  csci_item_list_t tmp5 = csci_item_list_t_create(csci.len);
  int tmp6 = 0;
  for (int tmp7 = 0; tmp7 < csci.len; tmp7++) {
    csci_item_t c = csci.data[tmp7];
    if (!(s.customer_sk == c.customer_sk && s.item_sk == c.item_sk)) {
      continue;
    }
    tmp5.data[tmp6] = c;
    tmp6++;
  }
  tmp5.len = tmp6;
  list_int tmp8 = list_int_create(ssci.len);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < ssci.len; tmp10++) {
    ssci_item_t s = ssci.data[tmp10];
    if (!((!(tmp5.len > 0)))) {
      continue;
    }
    tmp8.data[tmp9] = 1;
    tmp9++;
  }
  tmp8.len = tmp9;
  int store_only = tmp8.len;
  ssci_item_list_t tmp11 = ssci_item_list_t_create(ssci.len);
  int tmp12 = 0;
  for (int tmp13 = 0; tmp13 < ssci.len; tmp13++) {
    ssci_item_t s = ssci.data[tmp13];
    if (!(s.customer_sk == c.customer_sk && s.item_sk == c.item_sk)) {
      continue;
    }
    tmp11.data[tmp12] = s;
    tmp12++;
  }
  tmp11.len = tmp12;
  list_int tmp14 = list_int_create(csci.len);
  int tmp15 = 0;
  for (int tmp16 = 0; tmp16 < csci.len; tmp16++) {
    csci_item_t c = csci.data[tmp16];
    if (!((!(tmp11.len > 0)))) {
      continue;
    }
    tmp14.data[tmp15] = 1;
    tmp15++;
  }
  tmp14.len = tmp15;
  int catalog_only = tmp14.len;
  map_string_int result = (tmp_item_t){.store_only = store_only,
                                       .catalog_only = catalog_only,
                                       .store_and_catalog = both};
  _json_map_string_int(result);
  test_TPCDS_Q97_overlap_result = result;
  test_TPCDS_Q97_overlap();
  free(tmp5.data);
  free(tmp8.data);
  free(tmp11.data);
  free(tmp14.data);
  return 0;
}
